[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal_ICT_Abhinay_92400133174"
version = "0.1.0"
authors = [
    { name = "Abhinay", email = "abhinaychoudhari131794@marwadiuniversity.ac.in" }
]
dependencies = ["numpy", "matplotlib"]
requires-python = ">=3.7"
description = "Signal generation and operations package for ICT assignment"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage =" https://github.com/Abhi9182-gif/python.git"
Issues = "https://github.com/Abhi9182-gif/python.git"